Menu Bar,banner Image

--- a/index.html
+++ b/index.html
@@ -8,24 +8,30 @@
 	<section id="header">
 		<div class="container">
 			<div class="header">
-				<div class="logo">
+				<div class="nav_logo">
 					<h1>Portfolio</h1>
 				</div>
 
 				<div class="nav_menu">
 					<ul>
-						<li>Home</li>
-						<li>About</li>
-						<li>Services</li>
-						<li>Portfolio</li>
-						<li>CV</li>
-						<li>Contact</li>
+						<li><a href="">Home</a></li>
+						<li><a href="">About</a></li>
+						<li><a href="">Services</a></li>
+						<li><a href="">Portfolio</a></li>
+						<li><a href="">CV</a></li>
+						<li><a href="">Contact</a></li>
 					</ul>
 				</div>
 			</div>
 			
 		</div>
 	</section>
+
+	<div id="banner">
+		<div class="bnr_content">
+			
+		</div>
+	</div>
 
 </body>
 </html>
