--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<section id="header">
+	<div id="header">
 		<div class="container">
 			<div class="header">
 				<div class="nav_logo">
@@ -25,12 +25,18 @@
 			</div>
 			
 		</div>
-	</section>
+	</div>
 
 	<div id="banner">
-		<div class="bnr_content">
-			
+		<div class="banner">
+			<div class="container">
+				<div class="bnr_content">
+					<h2>Hello! I'm Ehtesham</h2>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br> when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br> It has survived not only five centuries,<br> but also the leap into electronic typesetting, remaining essentially unchanged. 	<br> It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, <br> and more recently with desktop publishing software like Aldus PageMaker <br> including versions of Lorem Ipsum.</p>
+				</div>
+			</div>
 		</div>
+		
 	</div>
 
 </body>
