--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 	<div id="banner">
 		<div class="banner">
 			<div class="container">
-				<div class="bnr_content">
-					<h2>Hello! I'm Ehtesham</h2>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br> when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br> It has survived not only five centuries,<br> but also the leap into electronic typesetting, remaining essentially unchanged. 	<br> It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, <br> and more recently with desktop publishing software like Aldus PageMaker <br> including versions of Lorem Ipsum.</p>
-				</div>
+				<!-- <div class="bnr_content">
+					
+				</div> -->
 			</div>
 		</div>
 		
